# lap-solver

./: .gitignore  CODE_OF_CONDUCT.md  readme.md
.github/workflows/: cmake-multi-platform.yml
images/: img10l.ppm  img10m.ppm  img10s.ppm  img1l.ppm  img1m.ppm  img1s.ppm  img2l.ppm  img2m.ppm  img2s.ppm  img3l.ppm  img3m.ppm  img3s.ppm  img4l.ppm  img4m.ppm  img4s.ppm  img5l.ppm  img5m.ppm  img5s.ppm  img6l.ppm  img6m.ppm  img6s.ppm  img7l.ppm  img7m.ppm  img7s.ppm  img8l.ppm  img8m.ppm  img8s.ppm  img9l.ppm  img9m.ppm  img9s.ppm
lap_solver/: CMakeLists.txt  lap.h
lap_solver/cmake/: CMakeLists.txt
lap_solver/core/: lap_cache.h  lap_caching_iterator.h  lap_cost.h  lap_direct_iterator.h  lap_no_iterator.h  lap_solver.h
lap_solver/core/cuda/: lap_cache.cuh  lap_cache.h  lap_caching_iterator.h  lap_continue_search.cuh  lap_cost.cuh  lap_cost.h  lap_cuda_helper.h  lap_direct_iterator.h  lap_get_final_cost.cuh  lap_get_min_max_best.cuh  lap_get_min_second_best.cuh  lap_get_minimal_cost.cuh  lap_initialize_search.cuh  lap_kernel.cuh  lap_search.cuh  lap_solver.h  lap_update_column.cuh  lap_update_estimated_v.cuh  lap_update_v.cuh  lap_worksharing.h
lap_solver/core/omp/: lap_caching_iterator.h  lap_cost.h  lap_direct_iterator.h  lap_no_iterator.h  lap_solver.h  lap_worksharing.h
lap_solver/core/sparse/: lap_cache.h  lap_caching_iterator.h  lap_cost.h  lap_direct_iterator.h  lap_solver.h
lap_solver/core/sparse/omp/: lap_caching_iterator.h  lap_cost.h  lap_direct_iterator.h  lap_solver.h  lap_worksharing.h
lap_solver/gcc/: CMakeLists.txt
lap_solver/gcc-7/: CMakeLists.txt
lap_solver/icc/: CMakeLists.txt
lap_solver/macos/: CMakeLists.txt
lap_solver/test/: image.h  test_cpu.cpp  test_gpu.cu  test_options.h
lap_solver/vc14/: test_solver.sln
lap_solver/vc14/test_cpu/: test_cpu.vcxproj  test_cpu.vcxproj.filters
lap_solver/vc14/test_gpu/: test_gpu.vcxproj  test_gpu.vcxproj.filters
lap_solver/vc17/: test_solver.sln
lap_solver/vc17/test_cpu/: test_cpu.vcxproj  test_cpu.vcxproj.filters
lap_solver/vc17/test_gpu/: test_gpu.vcxproj  test_gpu.vcxproj.filters
lap_solver/vc19/: test_solver.sln
lap_solver/vc19/test_cpu/: test_cpu.vcxproj  test_cpu.vcxproj.filters
lap_solver/vc19/test_gpu/: test_gpu.vcxproj  test_gpu.vcxproj.filters
